@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-14T16:20:00Z",
-  "count_outdated" : 206,
-  "uniques_outdated" : 145,
-  "count" : 207,
-  "uniques" : 146,
+  "timestamp" : "2023-09-01T08:21:27Z",
+  "count_outdated" : 207,
+  "uniques_outdated" : 146,
+  "count" : 209,
+  "uniques" : 147,
   "clones" : [
     {
-      "timestamp": "2023-08-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "timestamp": "2023-09-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
